[gd_scene load_steps=18 format=2]

[ext_resource path="res://charter/ChartingState.gd" type="Script" id=1]
[ext_resource path="res://charter/grid.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/tres/icon_.tres" type="DynamicFont" id=3]
[ext_resource path="res://misc/TextInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/montserrat/Montserrat-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://misc/CheckBtnInput.tscn" type="PackedScene" id=6]
[ext_resource path="res://misc/GEVTInput.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://misc/BtnInput.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float rgbAdder:hint_range(-255.0, 255.0) = 58.0;

void fragment() {
	float divided = rgbAdder / 255.0;
	vec4 tex = texture(SCREEN_TEXTURE, SCREEN_UV);
	tex.rgb += vec3(divided, divided, divided);
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/rgbAdder = 58.0

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 48
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 24
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="ChartingState" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 243, 731 )
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 768, 768 )

[node name="Spr" type="Sprite" parent="Grid"]
position = Vector2( 32, 256 )
texture = ExtResource( 2 )
offset = Vector2( -204, 456 )
region_enabled = true
region_rect = Rect2( 0, 0, 576, 1536 )

[node name="Notes" type="Node2D" parent="Grid"]

[node name="GlowRect" type="ColorRect" parent="Grid"]
material = SubResource( 2 )
margin_left = -460.0
margin_top = -56.0
margin_right = -396.0
margin_bottom = 8.0

[node name="Separator1" type="ColorRect" parent="Grid"]
margin_left = -206.0
margin_top = -58.0
margin_right = -202.0
margin_bottom = 1478.0
color = Color( 0, 0, 0, 1 )

[node name="Separator2" type="ColorRect" parent="Grid"]
margin_left = 50.0
margin_top = -58.0
margin_right = 54.0
margin_bottom = 1478.0
rect_pivot_offset = Vector2( 2, 119 )
color = Color( 0, 0, 0, 1 )

[node name="Separator3" type="ColorRect" parent="Grid"]
margin_left = -460.0
margin_top = 966.0
margin_right = 116.0
margin_bottom = 970.0
rect_pivot_offset = Vector2( 2, 119 )
color = Color( 0, 0, 0, 1 )

[node name="enm" type="Label" parent="Grid"]
margin_left = -438.0
margin_top = -108.0
margin_right = -238.0
margin_bottom = -66.0
custom_fonts/font = ExtResource( 3 )
text = "Enemy"
align = 1
valign = 1

[node name="plr" type="Label" parent="Grid"]
margin_left = -178.0
margin_top = -108.0
margin_right = 22.0
margin_bottom = -66.0
rect_pivot_offset = Vector2( -29, 22 )
custom_fonts/font = ExtResource( 3 )
text = "Player"
align = 1
valign = 1

[node name="evts" type="Label" parent="Grid"]
margin_left = 45.0
margin_top = -108.0
margin_right = 130.0
margin_bottom = -66.0
rect_pivot_offset = Vector2( -29, 22 )
custom_fonts/font = ExtResource( 3 )
text = "Events"
align = 1
valign = 1

[node name="StrumLine" type="ColorRect" parent="."]
margin_left = 308.0
margin_top = 707.0
margin_right = 884.0
margin_bottom = 712.0
color = Color( 0.917647, 0.886275, 0.92549, 1 )

[node name="AltChartPropsPanel" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="AltChartPropsPanel"]
margin_left = 920.0
margin_top = 910.0
margin_right = 1380.0
margin_bottom = 1045.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Song" parent="AltChartPropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1045, 935 )
key = "Song"
placeholder = "Destruction"
leftSpacing = 128.0
rightSpacing = 304.0

[node name="Reload" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 100, 80 )
content = "Reload Song"

[node name="Load" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 1048, 1010 )
content = "Load Chart"

[node name="Save" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 1256, 1010 )
content = "Save Chart"

[node name="Copy" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 100, 144 )
content = "Copy Section"

[node name="Paste" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 100, 208 )
content = "Paste Section"

[node name="SNC" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 100, 272 )
content = "Switch Cols"

[node name="SNR" parent="AltChartPropsPanel" instance=ExtResource( 9 )]
position = Vector2( 100, 336 )
content = "Switch Rows"

[node name="SectionPropsPanel" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="SectionPropsPanel"]
margin_left = 920.0
margin_top = 765.0
margin_right = 1380.0
margin_bottom = 900.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Title" type="Label" parent="SectionPropsPanel"]
margin_left = 920.0
margin_top = 765.0
margin_right = 1380.0
margin_bottom = 825.0
custom_fonts/font = SubResource( 3 )
text = "Section Properties"
align = 1
valign = 1

[node name="Focus" parent="SectionPropsPanel" instance=ExtResource( 6 )]
position = Vector2( 935, 853 )
key = "Must Hit Section"

[node name="NotePropsPanel" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="NotePropsPanel"]
margin_left = 1130.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 380.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Title" type="Label" parent="NotePropsPanel"]
margin_left = 1130.0
margin_top = 40.0
margin_right = 1877.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Note Properties"
align = 1
valign = 1

[node name="OffsetX" parent="NotePropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1290, 165 )
key = "Offset X"
placeholder = "Offset X"
defaultValue = "0"
leftSpacing = 128.0
rightSpacing = 192.0

[node name="OffsetY" parent="NotePropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1290, 225 )
key = "Offset Y"
placeholder = "Offset Y"
defaultValue = "0"
leftSpacing = 128.0
rightSpacing = 192.0

[node name="Length" parent="NotePropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1290, 285 )
key = "Length"
placeholder = "Length"
defaultValue = "0"
leftSpacing = 128.0
rightSpacing = 128.0

[node name="Alternative" parent="NotePropsPanel" instance=ExtResource( 6 )]
position = Vector2( 1158, 345 )
key = "Alternative Animation"

[node name="EventPropsPanel" type="Node2D" parent="."]
visible = false

[node name="BG" type="ColorRect" parent="EventPropsPanel"]
margin_left = 1130.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 520.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Title" type="Label" parent="EventPropsPanel"]
margin_left = 1130.0
margin_top = 40.0
margin_right = 1877.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Event Properties"
align = 1
valign = 1

[node name="GEVTInput" parent="EventPropsPanel" instance=ExtResource( 7 )]
position = Vector2( 1205, 120 )

[node name="ExtraNote" type="Label" parent="."]
margin_left = 1130.0
margin_top = 523.0
margin_right = 1880.0
margin_bottom = 602.0
custom_fonts/font = SubResource( 5 )
text = "Default Note Properties Mode"
align = 1
valign = 1

[node name="SectionDisplay" type="Label" parent="."]
margin_left = 1130.0
margin_top = 619.0
margin_right = 1880.0
margin_bottom = 698.0
custom_fonts/font = SubResource( 5 )
text = "Current Section: 0"
align = 1
valign = 1

[node name="ChartPropsPanel" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="ChartPropsPanel"]
margin_left = 1393.0
margin_top = 765.0
margin_right = 1875.0
margin_bottom = 1045.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Title" type="Label" parent="ChartPropsPanel"]
margin_left = 1393.0
margin_top = 765.0
margin_right = 1875.0
margin_bottom = 825.0
custom_fonts/font = SubResource( 3 )
text = "Chart Properties"
align = 1
valign = 1

[node name="BPM" parent="ChartPropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1500, 865 )
key = "BPM"
placeholder = "BPM"
defaultValue = "130"
leftSpacing = 96.0
rightSpacing = 96.0

[node name="Speed" parent="ChartPropsPanel" instance=ExtResource( 4 )]
position = Vector2( 1625, 915 )
key = "Scroll Speed"
placeholder = "Spd"
defaultValue = "1"
leftSpacing = 224.0
rightSpacing = 96.0

[node name="IO" parent="ChartPropsPanel" instance=ExtResource( 6 )]
position = Vector2( 1415, 965 )
key = "Inst Only"

[node name="VO" parent="ChartPropsPanel" instance=ExtResource( 6 )]
position = Vector2( 1415, 1015 )
key = "Voices Only"

[node name="NoteType" type="Label" parent="."]
margin_top = 989.0
margin_right = 298.0
margin_bottom = 1079.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="OpenDialog" type="FileDialog" parent="."]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 150, 52.5 )
theme = SubResource( 7 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.bin" )
show_hidden_files = true

[node name="SaveDialog" type="FileDialog" parent="."]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 150, 52.5 )
theme = SubResource( 7 )
access = 2
filters = PoolStringArray( "*.bin" )
show_hidden_files = true
